--- a/picking.css
+++ b/picking.css
@@ -5,11 +5,40 @@
         box-sizing: border-box;
     }
 
+
+
+
+    /*BODY SECTION*/
+
     body{
         background: #0f0c29;  
         background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29); 
         background: linear-gradient(to right, #24243e, #302b63, #0f0c29); 
     }
+
+    .body-2{
+        width: 100%;
+        height: 80vh;
+        margin: 30px 0 0 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .body_r_d{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        background: rgba(17, 17, 17, 0.178);
+        box-shadow: 0 0 7px  rgba(255, 255, 255, 0.055);
+    }
+
+
+
+
+
+
+     /*HEADER SECTION*/
 
     header{
         background: transparent;
@@ -34,6 +63,13 @@
         text-shadow: 0px 0px 9px rgba(255, 255, 255, 0.288);
     }
 
+
+
+
+
+
+     /*PROFILE SECTION*/
+
     .profile-ph{
         width: 70px;
         height: 70px;
@@ -56,11 +92,12 @@
         border-radius: 50%;
     }
 
-    .body-2{
-        width: 100%;
-        height: 80vh;
-        margin: 30px 0 0 0;
-    }
+
+
+
+
+     /*TABLE SECTION*/
+
 
     .best-time{
         padding: 5px;
@@ -69,10 +106,17 @@
     }
 
     .best-time > h3{
-        color: rgb(230, 212, 113);
+        color: #e9e9e9;
         margin: 20px 0 0 10px;
         font-size: 22px;
     }
+
+
+
+
+
+
+    /*USERS RECORD SECTION*/
 
     .tabla-rec-sem{
         width: 100%;
@@ -86,13 +130,16 @@
         padding: 5px;
         width: 100%;
         height: 60px;
-        background: rgba(238, 238, 238, 0.027);
+        background: #0f0c29;  
+        background: -webkit-linear-gradient(to right, rgba(36, 36, 62, 0.219), rgba(48, 43, 99, 0.219), rgba(14, 11, 40, 0.247)); 
+        background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
         display: flex;
         justify-content: space-between;
         align-items: center;
         margin: 4px 0;
-        border-top: 1px solid rgba(238, 238, 238, 0.096);
-        border-bottom: 1px solid rgba(238, 238, 238, 0.096);
+        box-shadow: 0 0 7px 2px rgba(150, 168, 135, 0.144);
+        border-top: 1px solid rgba(0, 0, 0, 0.096);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.87)
     }
 
     .user-picture{
@@ -110,16 +157,24 @@
     }
 
     .user-name > span{
-        color: rgba(255, 255, 255, 0.918);
+        color: #eeeeee;
         font-size: 17px;
         
     }
 
     .user-time > span{
-        color: rgba(189, 255, 136, 0.918);
+        color: #eeeeee;
         font-size: 17px;
         
     }
+
+
+
+
+
+
+
+    /*BOTTOM BUTTON'S SECTION*/
 
     .button{
         display: flex;
@@ -147,7 +202,8 @@
         flex-direction: column;
         justify-content: center;
         width: 100%;
-        height: 230px;
     }
+
+
 
 }
