--- a/picking.css
+++ b/picking.css
@@ -71,8 +71,8 @@
      /*PROFILE SECTION*/
 
     .profile-ph{
-        width: 70px;
-        height: 70px;
+        width: 60px;
+        height: 60px;
         margin: 20px 16px 0px 0px;
         border: 2px solid rgb(129, 119, 59);
         border-radius: 50%;
@@ -191,10 +191,19 @@
         font-size: 30px;
     }
 
-    .button-name > span{
+    .button-name{
+        width: 90%;
+        height: 100%;
+        display: flex;
+        justify-content: end;
+        align-items: center;
+    }
+
+    .button-name > a{
         color: rgba(189, 255, 136, 0.918);
         font-size: 17px;
         margin-right: 15px;
+        text-decoration: none;
     }
 
     .button-config{
