--- a/mesure.css
+++ b/mesure.css
@@ -16,6 +16,16 @@
         background: linear-gradient(to right, #24243e, #302b63, #0f0c29); 
     }
 
+    .body2{
+        width: 100%;
+        height: 80vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        padding: 10px;
+        margin-top: 20px;
+    }
+
 
 
 
@@ -77,6 +87,118 @@
 
 
 
+    
+
+    .container {
+        width: 100%;
+        height: 250px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: rgba(0, 0, 0, 0.089);
+        box-shadow: 0 0 5px 3px rgba(129, 119, 59, 0.315);
+    }
+
+    .container2 {
+        width: 100%;
+        height: 250px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+      
+    }
+    
+    .timer-display {
+        width: 100%;
+        color: rgb(238, 238, 238);
+        font-size: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 5px;
+    }
+    
+    .buttons {
+        width: 100%;
+        margin: 20px 0 0 0;
+        display: flex;
+        justify-content: space-around;
+    }
+    
+    .buttons button {
+        width: 120px;
+        height: 45px;
+        box-shadow: 0 0 7px 2px rgba(255, 255, 255, 0.288);
+        background: transparent;;
+        border: none;
+        font-size: 18px;
+        border-radius: 5px;
+        cursor: pointer;
+        outline: none;
+        color: rgb(238, 238, 238);
+        margin: 0 10px;
+    }
+    
+    .buttons button:nth-last-child(2) {
+        box-shadow: 0 0 7px 2px rgba(255, 255, 255, 0.288);
+        background: transparent;
+    }
+    
+    .buttons button:nth-last-child(1) {
+        box-shadow: 0 0 7px 2px rgba(255, 255, 255, 0.288);
+        background: transparent;
+    }
+    
+    .buttons button:hover {
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
+    }
+
+
+    .observacion{
+        display: flex;
+        flex-direction: column;
+        align-items: left;
+        justify-content: space-between;
+        width: 100%;
+        height: 120px;
+        padding: 10px;
+        margin-bottom: 10px;
+        
+    }
+
+    .observacion > h3{
+        color: rgb(238, 238, 238);
+        font-size: 20px;
+    }
+
+    .observacion > textarea{
+        margin-top: 5px;
+        padding: 20px;
+        background-color: rgba(0, 0, 0, 0.171);
+        border: none;
+        box-shadow: 0 0 5px 2px rgba(255, 255, 255, 0.068);
+    }
+
+    .observacion > textarea::placeholder{
+        color: rgb(170, 170, 170);
+        font-size: 12px;
+        
+    }
+
+
+    .boton-e > input {
+        width: 200px;
+        height: 50px;
+        background-color: rgba(83, 83, 83, 0.171);
+        border: 2px solid rgba(67, 129, 59, 0.459);
+        box-shadow: 0 0 5px 2px rgba(255, 255, 255, 0.288);
+        color: rgb(238, 238, 238);
+        font-size: 18px;
+        border-radius: 5px;
+    }
 
 
      
